test/samples/invalid/resolving/def_name_repeat1.maruir
fun foo(a: u8)

fun foo(b: u8, a:i16)
